--- a/consulfirewallrole/defaults/main.yml
+++ b/consulfirewallrole/defaults/main.yml
@@ -1,2 +1,6 @@
 ---
 # defaults file for consulfirewallrole
+metrics_list: ['10.10.0.17', '10.10.0.18']
+logs_list: ['10.10.0.19', '10.10.0.20']
+app_list: ['10.10.0.21', '10.10.0.22']
+backups_list: ['10.10.0.23', '10.10.0.24']
