use path to specify role

--- a/site.yml
+++ b/site.yml
@@ -5,4 +5,5 @@
   become_method: sudo
 
   roles:
-    - rngkll.consulfirewallrole
+    - roles/consulfirewallrole
+    #- rngkll.consulfirewallrole
